tests/resources/podindefaultnamespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podindefaultnamespace
  namespace: default
spec:
  containers:
    - name: dns
      image: dns-server
