tests/resources/podwithantiaffinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podwithantiaffinity
  namespace: test
spec:
  affinity:
    podAntiAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        - labelSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - nginx
          topologyKey: "kubernetes.io/hostname"
  containers:
    - name: nginx
      image: nginx
