tests/resources/podwithouttopology.yaml
apiVersion: v1
kind: Pod
metadata:
  name: podwithouttopology
  namespace: test
spec:
  containers:
    - name: nginx
      image: nginx
